--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,9 @@ img {
     padding: 10px;
     margin: 0 20px;
 }
+
+.choice:hover {
+    cursor: pointer;
+    background-color: white;
+    border: 5px solid black;
+}
