--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,14 @@ img {
     font-size: 20px;
     margin-top: 25px;
 }
+
+footer {
+    color: #25272E;
+    text-align: center;
+    font-family: Asap, sans-serif;
+    font-weight: bold;
+    background-color: white;
+    padding: 15px;
+    position: relative;
+    margin-top: 30%;
+}
